force-app/main/default/objects/IB_Metric_Ranking__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>IB Metric Rankings</relationshipLabel>
    <relationshipName>IB_Metric_Rankings</relationshipName>
    <type>Lookup</type>
</CustomField>