force-app/main/default/objects/IB_Metric_Ranking__c/fields/Order_Header__c.field-meta.xml
<CustomField>
    <fullName>Order_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Header</label>
    <referenceTo>Order_Header__c</referenceTo>
    <relationshipLabel>IB Metric Rankings</relationshipLabel>
    <relationshipName>IB_Metric_Rankings</relationshipName>
    <type>Lookup</type>
</CustomField>