force-app/main/default/objects/IB_Metric_Ranking__c/fields/TopScheduledEvent_Name__c.field-meta.xml
<CustomField>
    <fullName>TopScheduledEvent_Name__c</fullName>
    <label>TopScheduledEvent Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ScheduledEvent</fullName>
            </value>
            <value>
                <fullName>ScheduledEventRunOnce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>